--- a/website/src/app/shared/navbar/navbar.component.html
+++ b/website/src/app/shared/navbar/navbar.component.html
@@ -1,10 +1,28 @@
-
 <div class="navbar-container">
   <div class="navbar-top-container">
     <ul>
-      <li><a>Music Find</a></li>
-      <li><a>Search music</a></li>
-      <li><a>My page</a></li>
+      <li><a href="#">Music Find</a></li>
+      <li><a href="#">Search music</a></li>
+      <li><a href="#">My page</a></li>
     </ul>
+  </div>
+  <div class="navbar-bottom-container">
+    <div class="nav-bottom-left-container">
+      <div class="nav-bottom-left">
+        <h1 class="title-blue">Search music</h1>
+        <div class="under-line"></div>
+        <ul>
+          <li>Hei</li>
+          <li>Hei</li>
+          <li>Hei</li>
+          <li>Hei</li>
+        </ul>
+      </div>
+    </div>
+    <div class="nav-bottom-right-container">
+      <div class="nav-bottom-right">
+        <h1 class="title-blue">Right part</h1>
+      </div>
+    </div>
   </div>
 </div>
