--- a/website/src/app/shared/navbar/navbar.component.css
+++ b/website/src/app/shared/navbar/navbar.component.css
@@ -3,7 +3,6 @@ a {
   text-decoration: none;
   color: black;
 }
-
 .title-blue {
   color: #13738c;
   margin: 5px;
@@ -13,10 +12,17 @@ a {
   height:5px;
   background-color: #13738c;
 }
+.logo {
+  width: 100px;
+}
 
 .navbar-container {
   background-color: white;
   width: 100%;
+  font-family: "Intro Rust", sans-serif;
+}
+.navbar-top-container {
+  font-size: 10px;
 }
 .navbar-top-container ul {
   display: flex;
@@ -29,6 +35,7 @@ a {
 .navbar-top-container ul li a {
   display: block;
   padding: 10px;
+  color: #a52842;
 }
 .navbar-bottom-container {
   display: flex;
@@ -52,6 +59,7 @@ a {
   display: flex;
   margin: 0;
   padding: 0;
+  font-size: 13px;
 }
 .nav-bottom-left ul li {
   list-style-type: none;
