--- a/website/src/app/shared/navbar/navbar.component.html
+++ b/website/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="navbar-container">
   <div class="navbar-top-container">
     <ul>
-      <li><a href="#">Music Find</a></li>
+      <li><a href="#"><img class="logo" alt="logo" src="../assets/images/logo.png"></a></li>
       <li><a href="#">Search music</a></li>
       <li><a href="#">My page</a></li>
     </ul>
@@ -9,19 +9,19 @@
   <div class="navbar-bottom-container">
     <div class="nav-bottom-left-container">
       <div class="nav-bottom-left">
-        <h1 class="title-blue">Search music</h1>
+        <h3 class="title-blue">Search music</h3>
         <div class="under-line"></div>
         <ul>
-          <li>Hei</li>
-          <li>Hei</li>
-          <li>Hei</li>
-          <li>Hei</li>
+          <li>pop</li>
+          <li>rock</li>
+          <li>classic</li>
+          <li>jazz</li>
         </ul>
       </div>
     </div>
     <div class="nav-bottom-right-container">
       <div class="nav-bottom-right">
-        <h1 class="title-blue">Right part</h1>
+        <h3 class="title-blue">Search settings</h3>
       </div>
     </div>
   </div>
