--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -1,6 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "Intro Rust";
+  src: url("assets/fonts/IntroRust.otf");
+}
+
 body {
   padding: 0;
   margin: 0;
-  background-color: grey;
+  background-color: #f5f5f5;
 }
