--- a/website/src/app/shared/navbar/navbar.component.html
+++ b/website/src/app/shared/navbar/navbar.component.html
@@ -12,16 +12,31 @@
         <h3 class="title-blue">Search music</h3>
         <div class="under-line"></div>
         <ul>
-          <li>pop</li>
-          <li>rock</li>
-          <li>classic</li>
-          <li>jazz</li>
+          <li><a href="#" alt="menufilter">pop</a></li>
+          <li><a href="#" alt="menufilter">rock</a></li>
+          <li><a href="#" alt="menufilter">classic</a></li>
+          <li><a href="#" alt="menufilter">jazz</a></li>
         </ul>
       </div>
     </div>
     <div class="nav-bottom-right-container">
       <div class="nav-bottom-right">
         <h3 class="title-blue">Search settings</h3>
+        <div class="sort-by">
+          <p>Sort by: </p>&nbsp;&nbsp;
+          <select name="cars" class="input-select">
+            <option value="volvo">None</option>
+            <option value="saab">Popularity</option>
+            <option value="fiat">Title</option>
+            <option value="audi">Date</option>
+          </select>
+        </div>
+        <div class="filter-by">
+          <p>Filter by:</p>&nbsp;&nbsp;
+          <div class="filter-button"><input type="checkbox">Some filter</div>
+          <div class="filter-button"><input type="checkbox">Some filter</div>
+          <div class="filter-button"><input type="checkbox">Some filter</div>
+        </div>
       </div>
     </div>
   </div>
