--- a/website/src/app/components/search-page/search-page.component.html
+++ b/website/src/app/components/search-page/search-page.component.html
@@ -1,5 +1,6 @@
 <div class="search-top-content">
   <div class="input-search-wrapper"><input type="text" [(ngModel)]="searchInput" placeholder="Search here" class="input-search"></div>
 </div>
-
+<br><br>
+<app-search-result></app-search-result>
 
