--- a/website/src/app/components/search-result/search-result.component.html
+++ b/website/src/app/components/search-result/search-result.component.html
@@ -1,3 +1,8 @@
-<p>
-  search-result works!
-</p>
+
+<div *ngFor="let artist of artists">
+  <app-artist [artist]="artist"></app-artist>
+</div>
+
+
+
+
