style artist element, and make sure the elements wrap properly

--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -1,1 +1,17 @@
-<h1>{{artist.name}}</h1>
+
+<div class="artist-container">
+  <div class="image-wrapper">
+    <img src="{{artist.image}}" alt="artist picture"/>
+  </div>
+  <h4>{{artist.name}}</h4>
+  <p class="track-info">{{artist.tracks}} tracks</p>
+  <div class="bottom-buttons">
+    <div class="bottom-button border-right">
+      <a href="#">tracks</a>
+    </div>
+    <div class="bottom-button">
+      <a href="#">info</a>
+    </div>
+  </div>
+</div>
+
