--- a/website/src/app/components/search-result/search-result.component.html
+++ b/website/src/app/components/search-result/search-result.component.html
@@ -1,6 +1,8 @@
 
-<div *ngFor="let artist of artists">
-  <app-artist [artist]="artist"></app-artist>
+<div class="result-container">
+  <div *ngFor="let artist of artists">
+    <app-artist [artist]="artist"></app-artist>
+  </div>
 </div>
 
 
