--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -7,10 +7,11 @@
   <p class="track-info">{{artist.tracks}} tracks</p>
   <div class="bottom-buttons">
     <div class="bottom-button border-right">
-      <a href="#">tracks</a>
+      <span>tracks</span>
     </div>
     <div class="bottom-button">
-      <a href="#">info</a>
+      <span  (click)="openDialog()">Info</span>
+
     </div>
   </div>
 </div>
