--- a/website/src/styles.css
+++ b/website/src/styles.css
@@ -1,4 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 @font-face {
   font-family: "Intro Rust";
   src: url("assets/fonts/IntroRust.otf");
