Add link to log in/register

--- a/website/src/app/register/register.component.html
+++ b/website/src/app/register/register.component.html
@@ -7,4 +7,5 @@
 		<input type="password" placeholder="Password" name="password" class="input" [(ngModel)]="password">
 		<button type="submit">Register user</button>
 	</form>
+	<p><a>Already have a user? Click here to log in</a></p>
 </div>
