--- a/website/src/app/login/login.component.html
+++ b/website/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<p>{{result}}</p>
+	<p class="red">{{result}}</p>
 	<form (ngSubmit)="onSubmit()">
 		<label>Username</label>
 		<input type="text" placeholder="Username" name="username" class="input" [(ngModel)]="username">
@@ -7,4 +7,5 @@
 		<input type="password" placeholder="Password" name="password" class="input" [(ngModel)]="password">
 		<button type="submit">Login</button>
 	</form>
+	<a href="/api">Don't have a user? Click here to register</a>
 </div>
