--- a/website/src/app/components/artist/dialog.html
+++ b/website/src/app/components/artist/dialog.html
@@ -1,6 +1,4 @@
-<h1 mat-dialog-title>Artist name</h1>
-<mat-dialog-content>
-  Are you sure?
+<h1 >Hellloooooo</h1>
 
-</mat-dialog-content>
 
+<h3>WIIIHOOOOOOOOOOO</h3>
