start implementing design

--- a/website/src/app/components/profile/profile.component.html
+++ b/website/src/app/components/profile/profile.component.html
@@ -1,3 +1,7 @@
-<p>
-  profile works!
-</p>
+<h1>Profile page for {{username}}</h1>
+<h2>Credentials:</h2>
+<h3>Username: {{username}}</h3>
+<h3>Password: {{password}}</h3>
+<br>
+<h3>Member since: {{since}}</h3>
+<input type="button" value="Delete profile" />
