Added service and deleted certain files

--- a/website/src/app/components/search-result/search-result.component.html
+++ b/website/src/app/components/search-result/search-result.component.html
@@ -1,7 +1,7 @@
 
 <div class="result-container">
   <div *ngFor="let artist of artists">
-    <app-artist [artist]="artist"></app-artist>
+    <app-artist [artist]="artist" id={{artist.id}}></app-artist>
   </div>
 </div>
 
