--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -10,7 +10,7 @@
       <span>tracks</span>
     </div>
     <div class="bottom-button">
-      <span (click)="openDialog()">Info</span>
+      <span (click)="openDialog(artist.id)">Info</span>
 
     </div>
   </div>
