--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -1,3 +1,12 @@
-<h1 >Hellloooooo</h1>
+<div id="modal-dialog">
+	<div id="right-dialog">
+		<img src="{{data.image}}" alt="Artist picture"/>
+	</div>
+	<div id="left-dialog">
+		<h3>Artist</h3>
+		<h1>{{data.name}}</h1>
+		<p>Genres: Pop, Dance</p>
+		<p>Popularity: 97</p>
 
-<h1>{{data.name}}</h1>
+	</div>
+</div>
