--- a/website/src/app/components/dialog/dialog.component.css
+++ b/website/src/app/components/dialog/dialog.component.css
@@ -1,8 +1,32 @@
-#left-dialog {
+#modal-artist-dialog {
 	display: flex;
+	flex-direction: row;
+	font-family: "Intro Rust", sans-serif;
+}
 
+#left-dialog h3{
+	margin-top: 12%;
+	margin-bottom: 0;
+}
+#left-dialog h1 {
+	margin-top: 3px;
+
+}
+#genres-dialog {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+#popularity-dialog {
+	margin-bottom: 0;
+	margin-top: 2px;
 }
 
 #right-dialog {
+	width: 25%;
+	margin-right: 3%;
+}
 
+#artist-img-dialog {
+	width: 100%;
+	border-radius: 5px;
 }
