--- a/website/src/app/components/profile/profile.component.html
+++ b/website/src/app/components/profile/profile.component.html
@@ -1,7 +1,34 @@
-<h1>Profile page for {{username}}</h1>
-<h2>Credentials:</h2>
-<h3>Username: {{username}}</h3>
-<h3>Password: {{password}}</h3>
+<div class="info-wrapper">
+    <h1>Profile info for {{username}}</h1>
+    <div class="search-container">
+        <h2>Credentials:</h2>
+        <h3>Username: {{username}}</h3>
+        <h3>Password: {{password}}</h3>
+        <br>
+        <h3>Member since: {{since}}</h3>
+        <button class="deleteButton">
+            Delete profile
+        </button>
+    </div>
+</div>
 <br>
-<h3>Member since: {{since}}</h3>
-<input type="button" value="Delete profile" />
+<div class="search-wrapper">
+    <h1>Search history for {{username}}</h1>
+    <div class="search-info-wrapper">
+        <div class="search-numbers">
+            <h3>Unique searches</h3>
+            <div class="underline"></div>
+            <h1>{{uniqueSearches}}</h1>
+        </div>
+        <div class="search-numbers">
+            <h3>Total searches</h3>
+            <div class="underline"></div>
+            <h1>{{totalSearches}}</h1>
+        </div>
+    </div>
+    <div>
+        <h2>Recent searches</h2>
+        <search-history-list></search-history-list>
+        <
+    </div>
+</div>
