fix scaling for mobile, also fix routing from navbar

--- a/website/src/app/components/profile/profile.component.html
+++ b/website/src/app/components/profile/profile.component.html
@@ -27,7 +27,7 @@
         </div>
     </div>
     <div>
-        <h2>Recent searches</h2>
+        <h2>Recent viewed</h2>
         <search-history-list></search-history-list>
     </div>
 </div>
