--- a/website/src/app/components/profile/profile.component.css
+++ b/website/src/app/components/profile/profile.component.css
@@ -1,6 +1,5 @@
 /* USER INFO */
 .info-wrapper{
-    background-color: white;
     padding: 20px;
     margin: 10px;
     text-align: center;
@@ -8,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    float: left;
 }
 
 .search-container {
@@ -59,4 +59,10 @@
     width: 200px;
     height:5px;
     background-color: #13738c;
+}
+
+@media screen and (max-width: 480px) {
+    .info-wrapper {
+        float: none;
+    }
 }
