split navbar in two components

--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -7,7 +7,7 @@
   <p class="track-info">{{artist.album ? artist.album.length : 0}} albums</p>
   <div class="bottom-buttons">
     <div class="bottom-button border-right">
-      <a href="#">Albums</a>
+      <span href="#">Albums</span>
     </div>
     <div class="bottom-button">
       <span  (click)="openDialog()">Info</span>
