--- a/website/src/app/components/search-page/search-page.component.css
+++ b/website/src/app/components/search-page/search-page.component.css
@@ -1,5 +1,9 @@
 .search-top-content {
 }
+.navbar-search {
+	background-color: white;
+	font-family: "Intro Rust", sans-serif;
+}
 .input-search {
   width: 300px;
   height: 30px;
