--- a/website/src/app/components/search-page/search-page.component.html
+++ b/website/src/app/components/search-page/search-page.component.html
@@ -1,3 +1,6 @@
+<div class="navbar-search">
+	<app-navbar-search></app-navbar-search>
+</div>
 <div class="search-top-content">
   <div class="input-search-wrapper"><input type="text" [(ngModel)]="searchInput" (keyup)="onChangeSearch()" placeholder="Search here" class="input-search"></div>
 </div>
