--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -1,15 +1,26 @@
-<div id="modal-artist-dialog">
-	<div id="right-dialog">
-		<img id="artist-img-dialog" src="{{data[0].imageLink}}" alt="Artist picture"/>
-	</div>
-	<div id="left-dialog">
-		<h3>Artist</h3>
-		<h1>{{data[0].name}}</h1>
-		<p id="genres-dialog">Genres: {{data[0].genres.slice(0,4).join(', ')}}</p>
-		<p id="popularity-dialog">Popularity: {{data[0].popularity}}</p>
-	</div>
-</div>
-<br><hr id="hr-dialog"><br>
-<div id="modal-album-dialog">
+<div id="modal-dialog">
+	<div id="modal-artist-dialog">
+		<div id="right-dialog">
+			<img id="artist-img-dialog" src="{{data[0].imageLink}}" alt="Artist picture"/>
+		</div>
+		<div id="left-dialog">
+			<h3>Artist</h3>
+			<h1>{{data[0].name}}</h1>
+			<p id="genres-dialog">Genres: {{data[0].genres.slice(0,4).join(', ')}}</p>
+			<p id="popularity-dialog">Popularity: {{data[0].popularity}}</p>
+		</div>
 
+	</div>
+	<br><hr id="hr-dialog">
+	<h2>Albums</h2>
+	<div id="modal-album-dialog">
+		<div *ngFor="let album of data[1];" class="album-info-dialog">
+			<div class="img-dialog">
+				<img class="album-img-dialog" src="{{album.imageLink}}" alt="Album picture">
+			</div>
+			<div class="album-text-dialog">
+				<p>{{album.name}}</p>
+			</div>
+		</div>
+	</div>
 </div>
