--- a/website/src/app/components/profile/profile.component.css
+++ b/website/src/app/components/profile/profile.component.css
@@ -1,68 +1,4 @@
-/* USER INFO */
-.info-wrapper{
-    padding: 20px;
-    margin: 10px;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    float: left;
-}
-
-.search-container {
-  background-color: white;
-  width: auto;
-  padding: 20px;
-  border: 1px solid rgba(0,0,0,0.1);
-  border-radius: 5px;
-  margin: 10px;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.deleteButton{
-    width: 100px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    border: 1px solid rgba(5,0,0,0.3);
-    border-radius: 5px;
-    text-align: center;
-    font-family: "Intro Rust", sans-serif;
-}
-
-.info-wrapper h1{
-  margin: 0;
-  font-family: "Intro Rust", sans-serif;
-  color: #5a5a5a;
-}
-
-.info-wrapper h2, h3{
-  margin: 0;
-  font-family: "Intro Rust", sans-serif;
-  color: #353535;
-}
-
-/* SEARCH HISTORY */
-.search-info-wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.underline{
-    width: 200px;
-    height:5px;
-    background-color: #13738c;
-}
-
-@media screen and (max-width: 480px) {
-    .info-wrapper {
-        float: none;
-    }
+.navbar {
+	background-color: white;
+	font-family: "Intro Rust", sans-serif;
 }
