--- a/website/src/app/shared/navbar/navbar.component.html
+++ b/website/src/app/shared/navbar/navbar.component.html
@@ -2,8 +2,8 @@
 	<div class="navbar-top-container">
 		<ul>
 			<li><a href="#"><img class="logo" alt="logo" src="../assets/images/logo.png"></a></li>
-			<li><a href="#">Search music</a></li>
-			<li><a href="#">My page</a></li>
+			<li><a href="/search">Search music</a></li>
+			<li><a href="/profilepage">My page</a></li>
 		</ul>
 	</div>
 </div>
