Now has close button

--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -9,7 +9,7 @@
 		<span>tracks</span>
     </div>
     <div class="bottom-button">
-		<span (click)="openDialog(artist)">Info</span>
+		<span (click)="openDialog(artist)">albums</span>
     </div>
   </div>
 </div>
