add components for album and tracks

--- a/website/src/app/components/track/track.component.html
+++ b/website/src/app/components/track/track.component.html
@@ -1,10 +1,10 @@
 
 <div class="artist-container">
   <div class="image-wrapper">
-    <img src="{{artist.imageLink}}" alt="artist picture"/>
+    <img src="#" alt="artist picture"/>
   </div>
-  <h4>{{artist.name}}</h4>
-  <p class="track-info">{{artist.albums ? artist.albums.length : 0}} albums</p>
+  <h4>{{track.name}}</h4>
+  <p class="track-info">{{track.album ? track.albums.length : 0}} albums</p>
   <div class="bottom-buttons">
     <div class="bottom-button border-right">
       <span href="#">Albums</span>
