--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -3,7 +3,7 @@
         <img src="{{artist.imageLink}}" alt="artist picture"/>
     </div>
     <h4>{{artist.name}}</h4>
-    <p class="track-info">{{artist.album ? artist.album.length : 0}} albums</p>
+    <p class="track-info">{{artist.albums ? artist.albums.length : 0}} albums</p>
     <div class="bottom-buttons">
         <div class="bottom-button border-right">
             <a href="#">Albums</a>
