fix child routes for profilepage, and fix SPA routing for app

--- a/website/src/app/shared/navbar-profile/navbar-profile.component.html
+++ b/website/src/app/shared/navbar-profile/navbar-profile.component.html
@@ -4,8 +4,8 @@
 			<h3 class="title-blue">{{username}}s page</h3>
 			<div class="under-line"></div>
 			<ul>
-				<li><a href="/myinfo" alt="menufilter">My info</a></li>
-				<li><a href="/history" alt="menufilter">Search history</a></li>
+				<li><a routerLink="my-info" routerLinkActive="disabled">My info</a></li>
+				<li><a routerLink="history" routerLinkActive="disabled">Search history</a></li>
 			</ul>
 		</div>
 	</div>
