--- a/website/src/app/shared/navbar/navbar.component.html
+++ b/website/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="navbar-container">
 	<div class="navbar-top-container">
 		<ul>
-			<li><a href="#"><img class="logo" alt="logo" src="../assets/images/logo.png"></a></li>
-			<li><a href="/search">Search music</a></li>
-			<li><a href="/profilepage">My page</a></li>
+			<li><a routerLink="/#" routerLinkActive="disabled"><img class="logo" alt="logo" src="../assets/images/logo.png"></a></li>
+			<li><a routerLink="/search" routerLinkActive="disabled">Search music</a></li>
+			<li><a routerLink="/profilepage" routerLinkActive="disabled">My page</a></li>
 		</ul>
 	</div>
 </div>
