--- a/website/src/app/shared/navbar-search/navbar-search.component.html
+++ b/website/src/app/shared/navbar-search/navbar-search.component.html
@@ -34,4 +34,5 @@
 		</div>
 	</div>
 </div>
+<app-wordcloud></app-wordcloud>
 <app-search-page [sort]="sort" [sortType]="sortType" [filterList]="filterlist" #child></app-search-page>
