Add get function for aggregate data, implement function for mapping data to wordcloud input

--- a/website/src/app/components/wordcloud/wordcloud.component.html
+++ b/website/src/app/components/wordcloud/wordcloud.component.html
@@ -1,6 +1,8 @@
-<div AgWordCloud
-     #word_cloud_chart=ag-word-cloud
-     [wordData]="wordData"
-     [options]="options"
-     [color]="colors">
+<div *ngIf="loaded">
+    <div AgWordCloud
+         #word_cloud_chart=ag-word-cloud
+         [wordData]="wordData"
+         [options]="options"
+         [color]="colors">
+    </div>
 </div>
