--- a/website/src/app/components/wordcloud/wordcloud.component.html
+++ b/website/src/app/components/wordcloud/wordcloud.component.html
@@ -1,8 +1,15 @@
 <div *ngIf="loaded">
-    <div AgWordCloud
-         #word_cloud_chart=ag-word-cloud
-         [wordData]="wordData"
-         [options]="options"
-         [color]="colors">
+    <div *ngIf="wordData == null; else displayMessage">
+        <div AgWordCloud
+             #word_cloud_chart=ag-word-cloud
+             [wordData]="wordData"
+             [options]="options"
+             [color]="colors">
+        </div>
     </div>
+
+    <ng-template #displayMessage>
+        <p>Could not make a wordcloud for your genres since you are not following any artists!</p>
+    </ng-template>
+
 </div>
