--- a/website/src/app/components/history/history.component.html
+++ b/website/src/app/components/history/history.component.html
@@ -1,5 +1,6 @@
 <div class="info-wrapper">
     <h1>Search history for {{username}}</h1>
+    <wordcloud></wordcloud>
     <div class="search-info-wrapper">
         <div class="search-container">
             <h3>Unique searches</h3>
@@ -16,4 +17,5 @@
         <h2>Recent viewed</h2>
         <search-history-list></search-history-list>
     </div>
+
 </div>
