--- a/website/src/app/login/login.component.html
+++ b/website/src/app/login/login.component.html
@@ -7,5 +7,5 @@
 		<input type="password" placeholder="Password" name="password" class="input" [(ngModel)]="password">
 		<button type="submit">Login</button>
 	</form>
-	<p><a href="/register">Don't have a user? Click here to register</a></p>
+	<p><a routerLink="/register" routerLinkActive="disabled">Don't have a user? Click here to register</a></p>
 </div>
