--- a/website/src/app/components/my-info/my-info.component.html
+++ b/website/src/app/components/my-info/my-info.component.html
@@ -1,13 +1,14 @@
 <div class="info-wrapper">
     <h1>Profile info for {{username}}</h1>
+    <h2>Credentials</h2>
     <div class="search-container">
-        <h2>Credentials:</h2>
         <h3>Username: {{username}}</h3>
-        <h3>Password: {{password}}</h3>
+        <h3>Profiletype: {{profileType}}</h3>
         <br>
         <h3>Member since: {{since}}</h3>
-        <button class="deleteButton">
-            Delete profile
-        </button>
     </div>
+    <div>
+        <h2>Favorite Artists</h2>
+        <favorite-artists></favorite-artists>
+    <div>
 </div>
