Add my-info with real data

--- a/website/src/app/components/history/history.component.html
+++ b/website/src/app/components/history/history.component.html
@@ -1,21 +1,22 @@
-<div class="info-wrapper">
-    <h1>Search history for {{username}}</h1>
+<div *ngIf="user">
+    <div class="info-wrapper">
+        <h1>Search history for {{username}}</h1>
 
-    <div class="search-info-wrapper">
-        <div class="search-container">
-            <h3>Unique searches</h3>
-            <div class="underline"></div>
-            <h1>{{uniqueSearches}}</h1>
+        <div class="search-info-wrapper">
+            <div class="search-container">
+                <h3>Unique searches</h3>
+                <div class="underline"></div>
+                <h1>{{uniqueSearches}}</h1>
+            </div>
+            <div class="search-container">
+                <h3>Total searches</h3>
+                <div class="underline"></div>
+                <h1>{{totalSearches}}</h1>
+            </div>
         </div>
-        <div class="search-container">
-            <h3>Total searches</h3>
-            <div class="underline"></div>
-            <h1>{{totalSearches}}</h1>
+        <div>
+            <h2>Recently viewed</h2>
+            <search-history-list></search-history-list>
         </div>
     </div>
-    <div>
-        <h2>Recently viewed</h2>
-        <search-history-list></search-history-list>
-    </div>
-
 </div>
