--- a/website/src/app/components/favorite-artists/favorite-artists.component.css
+++ b/website/src/app/components/favorite-artists/favorite-artists.component.css
@@ -9,6 +9,25 @@
     min-width: 500px;
 }
 
+.no-artist-wrap {
+    background-color: white;
+    width: auto;
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 5px;
+    margin: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-scaler {
+    width: 150px;
+    height: 150px;
+}
+
 .mat-table {
   overflow: auto;
   max-height: 500px;
@@ -23,8 +42,12 @@ mat-row:active{
     background-color: grey
 }
 
+p {
+    font-family: "Intro Rust", sans-serif;
+}
+
 @media screen and (max-width: 600px) {
-    .mat-column-date {
+    .mat-column-popularity {
         display: none;
     }
     .example-container {
