--- a/website/src/app/components/my-info/my-info.component.html
+++ b/website/src/app/components/my-info/my-info.component.html
@@ -1,14 +1,16 @@
-<div class="info-wrapper">
-    <h1>Profile info for {{username}}</h1>
-    <h2>Credentials</h2>
-    <div class="search-container">
-        <h3>Username: {{username}}</h3>
-        <h3>Profiletype: {{profileType}}</h3>
-        <br>
-        <h3>Member since: {{since}}</h3>
+<div *ngIf="user">
+    <div class="info-wrapper">
+        <h1>Profile info for {{user.username}}</h1>
+        <h2>Credentials</h2>
+        <div class="search-container">
+            <h3>Username: {{user.username}}</h3>
+            <h3>Profiletype: {{profileType}}</h3>
+            <br>
+            <h3>Member since: {{date}}</h3>
+        </div>
+        <div>
+            <h2>Favorite Artists</h2>
+            <favorite-artists></favorite-artists>
+        <div>
     </div>
-    <div>
-        <h2>Favorite Artists</h2>
-        <favorite-artists></favorite-artists>
-    <div>
 </div>
