--- a/website/src/app/components/history/history.component.css
+++ b/website/src/app/components/history/history.component.css
@@ -6,7 +6,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    float: left;
+    padding-bottom: 0;
+    margin-bottom: 0;
 }
 
 .search-info-wrapper{
