--- a/website/src/app/shared/navbar-search/navbar-search.component.html
+++ b/website/src/app/shared/navbar-search/navbar-search.component.html
@@ -4,11 +4,10 @@
 			<div class="nav-bottom-left">
 				<h3 class="title-blue">Search music</h3>
 				<div class="under-line"></div>
-				<ul>
-					<li><a href="#" alt="menufilter">pop</a></li>
-					<li><a href="#" alt="menufilter">rock</a></li>
-					<li><a href="#" alt="menufilter">classic</a></li>
-					<li><a href="#" alt="menufilter">jazz</a></li>
+				<ul class="search-type-selectors">
+					<li><a [ngClass]="{'selected-type' : searchType == 'album'}" (click)="setSearchType($event)" data-type="album">Albums</a></li>
+					<li><a [ngClass]="{'selected-type' : searchType == 'artist'}" (click)="setSearchType($event)" data-type="artist">Artists</a></li>
+					<li><a [ngClass]="{'selected-type' : searchType == 'track'}" (click)="setSearchType($event)" data-type="track">Tracks</a></li>
 				</ul>
 			</div>
 		</div>
@@ -22,16 +21,31 @@
 						<option value="popularity">Popularity</option>
 						<option value="name">Name</option>
 					</select>
-
+                    <select (change)="selectSortType($event)" name="sortType" class="input-select">
+                        <option value="ascending">Asc</option>
+                        <option value="descending">Desc</option>
+                    </select>
 				</div>
 				<div class="filter-by">
-					<p>Filter by:</p>&nbsp;&nbsp;
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="edm">Edm</div>
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="house">House</div>
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="pop">Pop</div>
-				</div>
+                    <p>Filter by:</p>&nbsp;&nbsp;
+                    <div *ngIf="searchType == 'album'" class="filter-box">
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="edm">Edm</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="house">House</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="pop">Pop</div>
+                    </div>
+                    <div *ngIf="searchType == 'artist'" class="filter-box">
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="yes">Yes</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="some">Some</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="hello">Hello</div>
+                    </div>
+                    <div *ngIf="searchType == 'track'" class="filter-box">
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="christmas">Christmas</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="something">Something</div>
+                        <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="yo">Yo</div>
+                    </div>
+                </div>
 			</div>
 		</div>
 	</div>
 </div>
-<app-search-page [sort]="sort" [sortType]="sortType" [filterList]="filterlist" #child></app-search-page>
+<app-search-page [searchType]="searchType" [sort]="sort" [sortType]="sortType" [filterList]="filterlist" #child></app-search-page>
