--- a/website/src/app/shared/navbar-search/navbar-search.component.html
+++ b/website/src/app/shared/navbar-search/navbar-search.component.html
@@ -1,37 +1,43 @@
 <div class="navbar-search">
-	<div class="navbar-bottom-container">
-		<div class="nav-bottom-left-container">
-			<div class="nav-bottom-left">
-				<h3 class="title-blue">Search music</h3>
-				<div class="under-line"></div>
-				<ul>
-					<li><a href="#" alt="menufilter">pop</a></li>
-					<li><a href="#" alt="menufilter">rock</a></li>
-					<li><a href="#" alt="menufilter">classic</a></li>
-					<li><a href="#" alt="menufilter">jazz</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="nav-bottom-right-container">
-			<div class="nav-bottom-right">
-				<h3 class="title-blue">Search settings</h3>
-				<div class="sort-by">
-					<p>Sort by: </p>&nbsp;&nbsp;
-					<select (change)="selectSort($event)" name="sortBy" class="input-select">
-						<option value="none">None</option>
-						<option value="popularity">Popularity</option>
-						<option value="name">Name</option>
-					</select>
+    <div class="navbar-bottom-container">
+        <div class="nav-bottom-left-container">
+            <div class="nav-bottom-left">
+                <h3 class="title-blue">Search music</h3>
+                <div class="under-line"></div>
+                <ul>
+                    <li><a href="#" alt="menufilter">pop</a></li>
+                    <li><a href="#" alt="menufilter">rock</a></li>
+                    <li><a href="#" alt="menufilter">classic</a></li>
+                    <li><a href="#" alt="menufilter">jazz</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="nav-bottom-right-container">
+            <div class="nav-bottom-right">
+                <h3 class="title-blue">Search settings</h3>
+                <div class="sort-by">
+                    <p>Sort by: </p>&nbsp;&nbsp;
+                    <select (change)="selectSort($event)" name="sortBy" class="input-select">
+                        <option value="none">None</option>
+                        <option value="popularity">Popularity</option>
+                        <option value="name">Name</option>
+                    </select>
 
-				</div>
-				<div class="filter-by">
-					<p>Filter by:</p>&nbsp;&nbsp;
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="edm">Edm</div>
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="house">House</div>
-					<div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres" name="pop">Pop</div>
-				</div>
-			</div>
-		</div>
-	</div>
+                </div>
+                <div class="filter-by">
+                    <p>Filter by:</p>&nbsp;&nbsp;
+                    <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres"
+                                                      name="edm">Edm
+                    </div>
+                    <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres"
+                                                      name="house">House
+                    </div>
+                    <div class="filter-button"><input type="checkbox" (change)="selectFilter($event)" data-type="genres"
+                                                      name="pop">Pop
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<app-search-page [sort]="sort" [sortType]="sortType" [filterList]="filterlist" #child></app-search-page>
+<app-search-page [attr.sort]="sort" [attr.sortType]="sortType" [attr.filterList]="filterlist" #child></app-search-page>
