--- a/website/src/app/components/search-result/search-result.component.html
+++ b/website/src/app/components/search-result/search-result.component.html
@@ -1,8 +1,19 @@
-
 <div class="result-container">
-  <div *ngFor="let artist of artists">
-    <app-artist [artist]="artist" id={{artist.id}}></app-artist>
-  </div>
+    <div *ngIf="searchType === 'artist'">
+        <div *ngFor="let artist of artists">
+            <app-artist [artist]="artist" id={{artist.id}}></app-artist>
+        </div>
+    </div>
+    <div *ngIf="searchType === 'album'">
+        <div *ngFor="let artist of artists">
+            <app-artist [artist]="artist" id={{artist.id}}></app-artist>
+        </div>
+    </div>
+    <div *ngIf="searchType === 'track' && tracks">
+        <div *ngFor="let track of tracks">
+            <app-track [track]="track" ]></app-track>
+        </div>
+    </div>
 </div>
 
 
