--- a/website/src/app/components/dialog/dialog.component.html
+++ b/website/src/app/components/dialog/dialog.component.html
@@ -19,11 +19,13 @@
 	<div id="modal-album-dialog">
 		<div *ngFor="let album of data[1];" class="album-info-dialog">
 			<div class="img-dialog">
-				<img class="album-img-dialog" src="{{album.imageLink}}" alt="Album picture">
+				<img class="album-img-dialog"
+                     (click)="" src="{{album.imageLink}}" alt="Album picture">
 			</div>
 			<div class="album-text-dialog">
 				<p>{{album.name}}</p>
 			</div>
 		</div>
 	</div>
+    <p *ngFor="let song of data[2];">{{song.name}}</p>
 </div>
