--- a/website/src/app/components/artist/artist.component.html
+++ b/website/src/app/components/artist/artist.component.html
@@ -6,9 +6,9 @@
   <p class="track-info">{{artist.albums ? artist.albums.length : 0}} albums</p>
   <div class="bottom-buttons">
     <div class="bottom-button border-right">
-		<span (click)="openDialogTracks()">tracks</span>
+		<span (click)="openDialogAlbums('tracks')">tracks</span>
     </div>
     <div class="bottom-button">
-		<span (click)="openDialogAlbums()">albums</span>
+		<span (click)="openDialogAlbums('albums')">albums</span>
     </div>
 </div>
