--- a/website/src/app/components/songs-dialog/songs-dialog.component.css
+++ b/website/src/app/components/songs-dialog/songs-dialog.component.css
@@ -68,6 +68,36 @@
     width: 100%;
 }
 
+.song-img-dialog {
+    width: 50px;
+    height: 100%;
+    margin-right: 10px;
+    overflow: hidden;
+}
+
+.song-dialog {
+    display: flex;
+    height: 50px;
+    flex-direction: row;
+    box-shadow: 0 0 20px -4px rgba(0,0,0,0.20);
+    margin-bottom: 10px;
+
+}
+.song-dialog:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#information-song-dialog {
+    display: flex;
+    flex-direction: row;
+}
+#information-song-dialog #title{
+    margin-left: 60px;
+    width: 35%;
+}
+.song-dialog .title{
+    width: 35%;
+}
 
 
 @media screen and (max-width: 480px) {
