--- a/website/src/app/components/search-history-list/search-history-list.component.html
+++ b/website/src/app/components/search-history-list/search-history-list.component.html
@@ -1,22 +1,22 @@
 <div class="example-container mat-elevation-z8">
-    <mat-table #table [attr.dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource">
 
-        <!-- search Column -->
-        <ng-container attr.matColumnDef="search">
-            <mat-header-cell *matHeaderCellDef> Search text</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.search}}</mat-cell>
-        </ng-container>
+    <!-- search Column -->
+    <ng-container matColumnDef="search">
+      <mat-header-cell *matHeaderCellDef="search"> Search text </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.search}} </mat-cell>
+    </ng-container>
 
-        <!-- Date Column -->
-        <ng-container matColumnDef="date">
-            <mat-header-cell *matHeaderCellDef> Date</mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.date}}</mat-cell>
-        </ng-container>
+    <!-- Date Column -->
+    <ng-container matColumnDef="date">
+      <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+    </ng-container>
 
-        <mat-header-row [attr.matHeaderRowDef]="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; Columns: displayedColumns;"
-                 [attr.click]="handleRowClick(row)"
-        >
-        </mat-row>
-    </mat-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"
+            (click)="handleRowClick(row)"
+            >
+    </mat-row>
+  </mat-table>
 </div>
