--- a/website/src/app/components/search-history-list/search-history-list.component.html
+++ b/website/src/app/components/search-history-list/search-history-list.component.html
@@ -10,13 +10,13 @@
     <!-- search Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{element.typeData.name}} </mat-cell>
     </ng-container>
 
     <!-- Date Column -->
     <ng-container matColumnDef="date">
       <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.date}} </mat-cell>
+      <mat-cell *matCellDef="let element"> {{element.date.substr(0,10)}} </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
