design album component

--- a/website/src/app/components/album/album.component.html
+++ b/website/src/app/components/album/album.component.html
@@ -1,1 +1,15 @@
-<p>{{album.name}}</p>
+<div class="artist-container">
+    <div class="image-wrapper">
+        <img src="{{album.imageLink}}" alt="artist picture"/>
+    </div>
+    <h4>{{album.name}}</h4>
+    <p class="track-info">{{album.songs ? album.songs.length : 0}} songs</p>
+    <div class="bottom-buttons">
+        <div class="bottom-button border-right">
+            <span (click)="openDialog()">tracks</span>
+        </div>
+        <div class="bottom-button">
+            <span (click)="openDialog()">albums</span>
+        </div>
+    </div>
+</div>
