--- a/website/src/app/login/login.component.css
+++ b/website/src/app/login/login.component.css
@@ -1,5 +1,4 @@
 .input {
-	display: block;
 	width: 100%;
 	padding: 12px 10px;
 	margin: 8px 0;
@@ -7,10 +6,36 @@
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+	font-family: "Intro Rust", sans-serif;
 }
 
-.red {
+.wrapper{
+	background-color: white;
+    width: auto;
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 20px;
+    margin: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.logo {
+  width: 300px;
+  margin-bottom: 20px;
+}
+
+#errorText {
 	color: red;
+	display: none;
+}
+.form {
+	width: 20em;
+	display: inline-flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 button {
@@ -31,6 +56,12 @@ button:hover {
 }
 
 .container {
-	width: 100%;
-	font-family: Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	padding: 20px;
+    margin: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+	font-family: "Intro Rust", sans-serif;
 }
