--- a/website/src/app/components/search-result/search-result.component.html
+++ b/website/src/app/components/search-result/search-result.component.html
@@ -1,15 +1,15 @@
 <div class="result-container">
-    <div *ngIf="searchType === 'artist' && artists">
+    <div *ngIf="searchType === 'artist' && artists" [style.width.px]="divWidth">
         <div *ngFor="let artist of artists">
             <app-artist [artist]="artist" id={{artist.id}}></app-artist>
         </div>
     </div>
-    <div *ngIf="searchType === 'album' && albums">
+    <div *ngIf="searchType === 'album' && albums" [style.width.px]="divWidth">
         <div *ngFor="let album of albums">
             <app-album [album]="album" id={{album.id}}></app-album>
         </div>
     </div>
-    <div *ngIf="searchType === 'track' && tracks">
+    <div *ngIf="searchType === 'track' && tracks" [style.width.px]="divWidth">
         <div *ngFor="let track of tracks">
             <app-track [track]="track" id={{track.id}}></app-track>
         </div>
