fix scaling for mobile platform in login and register

--- a/website/src/app/components/register/register.component.css
+++ b/website/src/app/components/register/register.component.css
@@ -62,3 +62,12 @@ button:hover {
 	justify-content: center;
 	font-family: "Intro Rust", sans-serif;
 }
+@media screen and (max-width: 480px) {
+    .wrapper {
+		width: 100%
+	}
+
+	.form {
+		width: 100%
+	}
+}
