--- a/website/src/app/components/login/login.component.css
+++ b/website/src/app/components/login/login.component.css
@@ -65,3 +65,17 @@ button:hover {
     justify-content: center;
 	font-family: "Intro Rust", sans-serif;
 }
+
+@media screen and (max-width: 480px) {
+    .wrapper {
+		width: 100%
+	}
+
+	.form {
+		width: 100%
+	}
+
+	.logo {
+		width: 200px
+	}
+}
